import "Error.proto";

option optimize_for = SPEED;
package Server;

enum RESPONSE_MSG
{
	HEART = 0;
	FLAGS = 1;
	LOGIN = 2;
	HOST = 3;
	CREATE_GAME = 4;
	DESTROY_GAME = 5;
	ENTER_GAME = 6;
	EXIT_GAME = 7;
	SEND_TO_PLAYER = 8;
}

message Heart
{
	required int32 timestamp = 1;
}

message Flags
{
	required uint32 flags = 1;
}

message Login
{
	required ErrorCode.Code err = 1;
	optional uint32 guid = 2;
}

message Host
{
}

message CreateGame
{
	required ErrorCode.Code err = 1;
	optional uint32 gameid = 2;
}

message DestroyGame
{
	required ErrorCode.Code err = 1;
}

message EnterGame
{
	required ErrorCode.Code err = 1;
	optional uint32 guid = 2;
	optional uint32 gameid = 3;
}

message ExitGame
{
	required ErrorCode.Code err = 1;
	optional uint32 guid = 2;
}

message SendToPlayer
{
	required int32 size = 1;
	required bytes data = 2;
}